@@ -383,7 +383,7 @@ public final class ReferenceFactory
 
 	if(beg == -1)
 	{
-	    return create(ident, new java.util.Hashtable(), facet, mode, secure, "", routerInfo, locatorInfo);
+	    return create(ident, _instance.getDefaultContext(), facet, mode, secure, "", routerInfo, locatorInfo);
 	}
 
         java.util.Vector endpoints = new java.util.Vector();
@@ -434,7 +434,7 @@ public final class ReferenceFactory
 
 	    Endpoint[] endp = new Endpoint[endpoints.size()];
 	    endpoints.copyInto(endp);
-	    return create(ident, new java.util.Hashtable(), facet, mode, secure, endp, routerInfo);
+	    return create(ident, _instance.getDefaultContext(), facet, mode, secure, endp, routerInfo);
 	}
 	else if(s.charAt(beg) == '@')
 	{
@@ -474,7 +474,7 @@ public final class ReferenceFactory
 		throw e;
 	    }
 	    adapter = token.value;
-	    return create(ident, new java.util.Hashtable(), facet, mode, secure, adapter, routerInfo, locatorInfo);
+	    return create(ident, _instance.getDefaultContext(), facet, mode, secure, adapter, routerInfo, locatorInfo);
 	}
 
 	Ice.ProxyParseException ex = new Ice.ProxyParseException();
@@ -535,13 +535,13 @@ public final class ReferenceFactory
 	    {
 		endpoints[i] = _instance.endpointFactory().read(s);
 	    }
-	    return create(ident, new java.util.Hashtable(), facet, mode, secure, endpoints, routerInfo);
+	    return create(ident, _instance.getDefaultContext(), facet, mode, secure, endpoints, routerInfo);
 	}
 	else
 	{
 	    endpoints = new Endpoint[0];
 	    adapterId = s.readString();
-	    return create(ident, new java.util.Hashtable(), facet, mode, secure, adapterId, routerInfo, locatorInfo);
+	    return create(ident, _instance.getDefaultContext(), facet, mode, secure, adapterId, routerInfo, locatorInfo);
 	}
     }
 
