@@ -1,6 +1,9 @@
 Changes since version 1.0.0
 ---------------------------
 
+- The contents of the default context set on a communicator were
+  ignored, so an empty default context was marshaled. Fixed this.
+
 - Fixed a bug in the Slice parser that caused problems if an
   included file contained white space in the file name.
 
